--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "node": "16.14.2"
   },
   "scripts": {
     "start:front": "react-scripts start",
